added the first blog

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>Web Pro Hridoy</title>
 </head>
 <body>
   
+
+<div>
+  <h2>My 1st Div</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat enim ipsum consectetur asperiores? Numquam recusandae saepe sunt fuga eligendi dolore reprehenderit magni nulla. Similique impedit ut libero aut ea omnis!</p>
+</div>
+
+
+
+
+
+
+
 </body>
 </html>
