added the seceond blog

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat enim ipsum consectetur asperiores? Numquam recusandae saepe sunt fuga eligendi dolore reprehenderit magni nulla. Similique impedit ut libero aut ea omnis!</p>
 </div>
 
+<div>
+  <h2>My 1st Div</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat enim ipsum consectetur asperiores? Numquam recusandae saepe sunt fuga eligendi dolore reprehenderit magni nulla. Similique impedit ut libero aut ea omnis!</p>
+</div>
+<div>
+  <h2>My 1st Div</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat enim ipsum consectetur asperiores? Numquam recusandae saepe sunt fuga eligendi dolore reprehenderit magni nulla. Similique impedit ut libero aut ea omnis!</p>
+</div>
 
 
 
